--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>LoL Human</title>
+    <title>Touka Bot</title>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/default.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <i class="fa fa-smile-beam fa-2x"></i>
-                <div class="sidebar-brand-text mx-3">LoL Human APIs</div>
+                <div class="sidebar-brand-text mx-3">Touka Bot APIs</div>
             </a>
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
@@ -188,7 +188,7 @@
                 <div id="collapseEntern" class="collapse" aria-labelledby="headingTable" data-parent="#accordionSidebar">
                     <div class="py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Entertainment</h6>
-                        <a class="collapse-item" target="_blank" href="/api/ninja/LoLHuman">Generate Nama Ninja</a>
+                        <a class="collapse-item" target="_blank" href="/api/ninja/ToukaBot">Generate Nama Ninja</a>
                         <a class="collapse-item" target="_blank" href="/api/simi/hallo%20sim">SimSimi</a>
                     </div>
                 </div>
@@ -202,8 +202,8 @@
                     <div class="py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Creator</h6>
                         <a class="collapse-item" target="_blank" href="/api/qrcode/tahu">QR Code</a>
-                        <a class="collapse-item" target="_blank" href="/api/read-qr?url=https://lol-human.herokuapp.com/api/qrcode/tahu">Read QR Code</a>
-                        <a class="collapse-item" target="_blank" href="/api/carbon?code=LoLHuman">Carbon Now sh</a>
+                        <a class="collapse-item" target="_blank" href="/api/read-qr?url=https://toukabotapi.herokuapp.com/api/qrcode/tahu">Read QR Code</a>
+                        <a class="collapse-item" target="_blank" href="/api/carbon?code=ToukaBot">Carbon Now sh</a>
                         <a class="collapse-item" target="_blank" href="/api/gtts/kode_negara/text">Text To Speak</a>
                     </div>
                 </div>
@@ -243,9 +243,9 @@
                 Contact
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="https://t.me/LoLHumen">
-                    <i class="fab fa-fw fa-telegram-plane"></i>
-                    <span>Telegram</span>
+                <a class="nav-link" href="https://instagram.com/zanganzz_">
+                    <i class="fab fa-fw fa-instagram-plane"></i>
+                    <span>Instagram</span>
                 </a>
             </li>
             <hr class="sidebar-divider">
@@ -262,7 +262,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fa fa-user-circle fa-2x"></i>
-                                <span class="ml-2 d-none d-lg-inline small font-weight-bold">LoL Human</span>
+                                <span class="ml-2 d-none d-lg-inline small font-weight-bold">Touka Bot</span>
                             </a>
                         </li>
                     </ul>
@@ -278,7 +278,7 @@
                                     <div class="text-md-left font-weight-bold mb-2 text-primary">Free public Rest APIs by developer for developers</div>
                                     <div class="text-sm-left mb-0 font-weight-bold">Hello, everyone. Glad to hear you wanted to use my Rest API. Please use this website wisely. This website can be accessed for free, but if you want to donate to me, I will gladly accept :) If you find some bugs, please
                                         report them via
-                                        <a href="https://t.me/LoLHumen" target="_blank" style="color: #d3d5f3; text-decoration: none;">telegram.</a>
+                                        <a href="https://instagram.com/zanganzz_" target="_blank" style="color: #d3d5f3; text-decoration: none;">Instagram.</a>
                                     </div>
                                 </div>
                                 <div class="col-auto">
@@ -359,8 +359,8 @@
                         <div class="col-lg-12 text-center">
                             Someone want to donate me?
                             <p>
-                                <a href="https://trakteer.id/LoLHuman" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Trakteer</a>
-                                <a href="https://paypal.me/LoLHuman" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-paypal"></i>&nbsp;Paypal</a>
+                                <a href="https://trakteer.id/ToukaBot" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Trakteer</a>
+                                <a href="https://paypal.me/ToukaBot" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-paypal"></i>&nbsp;Paypal</a>
                             </p>
                         </div>
                     </div>
@@ -372,7 +372,7 @@
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         Made with <i class="fa fa-heart"></i> by
-                        <a href="https://t.me/LoLHumen" target="_blank" style="color: #fff;">LoL Human</a>
+                        <a href="https://instagram.com/zanganzz_" target="_blank" style="color: #fff;">Touka Bot</a>
                         </span>
                     </div>
                 </div>
